test/files/neg/xml-parens.scala
// scalac: -Ystop-after:typer
//
object Test {
  <e></e>()
}
