test/files/neg/xml-parens.check
xml-parens.scala:4: error: To compile XML syntax, the scala.xml package must be on the classpath.
Please see https://github.com/scala/scala-xml for details.
  <e></e>()
  ^
1 error
